Add nvavbar with png image, and intro to html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
 </head>
 <body>
   <div class="body">
-    
+    <div class="navbar">
+      <nav>
+        <img src="img/Epicodus.png" alt="rollerskate logo" class="skatepng">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">GitHub</a></li>
+          <li><a href="#">Hire Me</a></li>
+          <li><a href="#">Rollerskating</a></li>
+          <li><a href="#">Rick Roll</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="heading">
+      <h1>I'm Liam <span>Eller</span></h1>
+      <p>This is my official Portfolio website to show all
+        <br> details and work experience in web development
+      </p>
+    </div>
   </div>
 </body>
 </html>
