--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>My Portfolio Page</title>
 </head>
@@ -8,7 +9,7 @@
   <div class="body">
     <div class="navbar">
       <nav>
-        <img src="img/Epicodus.png" alt="rollerskate logo" class="skatepng">
+        <img src="img/slider.png" alt="rollerskate logo" class="skatepng">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">GitHub</a></li>
@@ -21,8 +22,16 @@
     <div class="heading">
       <h1>I'm Liam <span>Eller</span></h1>
       <p>This is my official Portfolio website to show all
-        <br> details and work experience in web development
+        <br>Details and work experience in web development
       </p>
+      <a href="https://github.com/lionturtle99" class="fa fa-github"></a>
+      <a href="https://www.facebook.com/david.eller.12177/" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="https://www.instagram.com/sincerlyliam/" class="fa fa-instagram"></a>
+    </div>
+    <div class="shape">
+      <img src="img/yellow-cloud.png" alt="yellow shape">
+      <img src="img/abstract-background.png" alt="yellow shape">
     </div>
   </div>
 </body>
