Add html page for github info with background animation and navbar

--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
       <nav>
         <img src="img/slider.png" alt="rollerskate logo" class="skatepng">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Hire Me</a></li>
-          <li><a href="#">Rollerskating</a></li>
-          <li><a href="#">Rick Roll</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="github.html">GITHUB</a></li>
+          <li><a href="#">HIRE ME</a></li>
+          <li><a href="#">SKATE LIFE</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">RICK ROLL</a></li>
         </ul>
       </nav>
     </div>
     <div class="heading">
-      <h1>I'm Liam <span>Eller</span></h1>
-      <p>This is my official Portfolio website to show all
-        <br>Details and work experience in web development
+      <h1>I am <span>Liam</span> Eller</h1>
+      <p>
+        This is my official Portfolio website to show all details
+        <br>and work experience in web development
       </p>
       <a href="https://github.com/lionturtle99" class="fa fa-github"></a>
       <a href="https://www.facebook.com/david.eller.12177/" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
       <a href="https://www.instagram.com/sincerlyliam/" class="fa fa-instagram"></a>
     </div>
-    <div class="shape">
-      <img src="img/yellow-cloud.png" alt="yellow shape">
-      <img src="img/abstract-background.png" alt="yellow shape">
-    </div>
+    <div class="shapes">
+      <img class="redshape" src="img/red-abstract.png" alt="yellow shape">
+      <img class="person" src="img/vampire.png" alt="yellow shape">
   </div>
 </body>
 </html>
