add bootstrap styling to repo section of my github.html file

--- a/github.html
+++ b/github.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>My GitHub Page</title>
   </head>
@@ -8,7 +11,7 @@
     <div class="navbar">
       <nav>
         <img src="img/slider.png" alt="rollerskate logo" class="skatepng">
-        <ul>
+        <ul class="githubnav">
           <li><a href="index.html">HOME</a></li>
           <li><a href="github.html">GITHUB</a></li>
           <li><a href="#">HIRE ME</a></li>
@@ -27,8 +30,8 @@
         <li></li>
       </ul>
     </div>
-    <!-- <div class="repos">
-      <div>
+    <div class="container">
+      <div class="card">
         <a href="#"><h3>name of repo</h3></a>
         <p>brief description</p>
       </div>
@@ -71,6 +74,6 @@
         <a href="#"><h3>name of repo</h3></a>
         <p>brief description</p>
       </div>
-    </div> -->
+    </div>
   </body>
 </html> 
