Add featured repos and styling

--- a/github.html
+++ b/github.html
@@ -14,8 +14,8 @@
         <ul class="githubnav">
           <li><a href="index.html">HOME</a></li>
           <li><a href="github.html">GITHUB</a></li>
+          <li><a href="#">ABOUT ME</a></li>
           <li><a href="#">HIRE ME</a></li>
-          <li><a href="#">SKATE LIFE</a></li>
           <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">RICK ROLL</a></li>
         </ul>
       </nav>
@@ -31,38 +31,77 @@
       </ul>
     </div>
     <div class="container">
-      <div class="card">
-        <a href="#"><h3>name of repo</h3></a>
-        <p>brief description</p>
+      <div>
+        <a href="https://github.com/lionturtle99/flash-cards.git"><h3>Flash Cards</h3></a>
+        <p>A website made for practicing javascript & jquery</p>
+        <br>
+        <p>Languages Used:</p>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>javascript</li>
+        </ul>
       </div>
       <div>
-        <a href="#"><h3>name of repo</h3></a>
-        <p>brief description</p>
+        <a href="https://github.com/lionturtle99/animal-shelter.git"><h3>Animal Shelter</h3></a>
+        <p>A website made for practicing using bootstrap</p>
+        <br>
+        <p>Languages Used:</p>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+        </ul>
       </div>
       <div>
-        <a href="#"><h3>name of repo</h3></a>
-        <p>brief description</p>
+        <a href="https://github.com/lionturtle99/Currency-Exchange.git"><h3>Currency Exchange</h3></a>
+        <p>A website utilizing a currency exchange API</p>
+        <br>
+        <p>Languages Used:</p>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>javascript</li>
+        </ul>
       </div>
       <div>
-        <a href="#"><h3>name of repo</h3></a>
-        <p>brief description</p>
+        <a href="https://github.com/lionturtle99/lunar-lander.git"><h3>Lunar Lander</h3></a>
+        <p>A single player game where you collect starts to earn points. Made with Phaser (an open source HTML5 game framework).</p>
+        <br>
+        <p>Languages Used:</p>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>javascript</li>
+        </ul>
       </div>
       <div>
-        <a href="#"><h3>name of repo</h3></a>
-        <p>brief description</p>
+        <a href="https://github.com/lionturtle99/Mr.Robot.git"><h3>Mr Robot</h3></a>
+        <p>A website that takes inputted numbers and returns it's value with certain numbers replaced with words.</p>
+        <br>
+        <p>Languages Used:</p>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>javascript</li>
+        </ul>
       </div>
       <div>
-        <a href="#"><h3>name of repo</h3></a>
-        <p>brief description</p>
+        <a href="https://github.com/lionturtle99/Pizza-Parlor.git"><h3>Pizza Parlor</h3></a>
+        <p>A website Where you can order a custom pizza.</p>
+        <br>
+        <p>Illistrating skills in objects & object prototypes.</p>
+        <br>
+        <p>Languages Used:</p>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>javascript</li>
+        </ul>
       </div>
       <div>
         <a href="#"><h3>name of repo</h3></a>
         <p>brief description</p>
       </div><div>
-        <a href="#"><h3>name of repo</h3></a>
-        <p>brief description</p>
-      </div>
-      <div>
         <a href="#"><h3>name of repo</h3></a>
         <p>brief description</p>
       </div>
