add div with about me info to aboutme.html and styling

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,21 @@
         </ul>
       </nav>
     </div>
+    <div class="content">
+      <h1>David Liam Eller</h1>
+      <em><h3>Background</h3></em>
+      <p>David Liam Eller (known as Liam) was born in a small eco village in the wilderness of Alaska and left home at the young age of 17 in order to pursue independance and adventure! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates velit animi, voluptas eaque exercitationem consectetur provident beatae, quaerat doloremque assumenda magnam aliquam adipisci fugiat, laudantium laboriosam esse eveniet aperiam similique. sit amet consectetur adipisicing elit. Nulla sunt aperiam, natus est, odit vel repudiandae, sint voluptatum qui nihil corporis quae. Laudantium aliquam nihil accusantium. Cupiditate odit consectetur exercitationem!</p>
+      <strong><em>Countries I've Visited</em></strong>
+      <ol>
+        <li>Canada</li>
+        <li>Mexico</li>
+        <li>France</li>
+        <li>Spain</li>
+        <li>India</li>
+        <li>Israel</li>
+      </ol>
+      <p>Something about how traveling has made me a better person... Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta dignissimos animi error vero architecto sequi exercitationem, porro suscipit ratione delectus consequatur a perspiciatis eos cupiditate libero placeat! Cum, maxime. Lorem ipsum dolor.</p>
+    </div>
   </div>
 </body>
 </html>
