fix the animation to span the entire page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="index.html">HOME</a></li>
           <li><a href="github.html">GITHUB</a></li>
-          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="aboutme.html">ABOUT ME</a></li>
           <li><a href="#">HIRE ME</a></li>
           <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">RICK ROLL</a></li>
         </ul>
