--- a/github.html
+++ b/github.html
@@ -14,7 +14,7 @@
         <ul class="githubnav">
           <li><a href="index.html">HOME</a></li>
           <li><a href="github.html">GITHUB</a></li>
-          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="aboutme.html">ABOUT ME</a></li>
           <li><a href="#">HIRE ME</a></li>
           <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">RICK ROLL</a></li>
         </ul>
